Add tailwind and sass

--- a/client/package.json
+++ b/client/package.json
@@ -36,5 +36,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.0",
+    "sass": "^1.59.3"
   }
 }
