--- a/server/package.json
+++ b/server/package.json
@@ -12,17 +12,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/text-to-speech": "^4.2.1",
     "apollo-server-express": "^3.6.2",
     "bcrypt": "^4.0.1",
+    "dotenv": "^16.0.3",
     "express": "^4.17.2",
     "graphql": "^16.3.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.9.2",
-    "openai": "^3.2.1",
-    "stripe": "^8.67.0",
-    "dotenv": "^16.0.3",
     "multer": "^1.4.5-lts.1",
-    "sharp": "^0.31.3"
+    "openai": "^3.2.1",
+    "sharp": "^0.31.3",
+    "stripe": "^8.67.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
