ProphecyHistory Query Data pulling works

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "book-of-fortune",
+  "name": "oracle",
   "version": "1.0.0",
   "description": "",
   "homepage": "https://github.com/winglovecola/book-of-fortune",
