--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "server/server.js",
   "scripts": {
     "start": "node server --ignore client",
+    "heroku-postbuild": "cd client && npm install && npm run build",
     "develop": "concurrently \"cd server && npm run start\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
     "seed": "cd server && npm run seed",
