fix style indentation

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Oracle",
-  "name": "Unveiling the future, one prophecy at a time.",
+  "name": "Oracle",
   "icons": [
     {
       "src": "favicon16.ico",
