--- a/client/package.json
+++ b/client/package.json
@@ -5,16 +5,17 @@
   "proxy": "http://localhost:3001/",
   "dependencies": {
     "@apollo/client": "^3.5.8",
+    "@babel/core": "^7.23.7",
     "@stripe/stripe-js": "^1.3.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "graphql": "^15.4.0",
+    "graphql": "^16.8.1",
     "jwt-decode": "^2.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "words-to-numbers": "^1.5.1"
   },
   "scripts": {
@@ -39,6 +40,9 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/plugin-syntax-jsx": "^7.23.3",
+    "@babel/preset-react": "^7.23.3",
     "sass": "^1.59.3",
     "tailwindcss": "^3.3.0"
   }
