--- a/client/package.json
+++ b/client/package.json
@@ -43,6 +43,8 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-syntax-jsx": "^7.23.3",
     "@babel/preset-react": "^7.23.3",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^8.56.0",
     "sass": "^1.59.3",
     "tailwindcss": "^3.3.0"
   }
