--- a/client/.babelrc
+++ b/client/.babelrc
@@ -1,5 +1,9 @@
 {
-
-    "presets": ["@babel/preset-env", "@babel/preset-react"],
-    "plugins": ["@babel/plugin-proposal-private-property-in-object"]
-}
+    "presets": [
+      "@babel/preset-env",
+      "@babel/preset-react"
+    ],
+    "plugins": [
+      "@babel/plugin-proposal-private-property-in-object"
+    ]
+  }
