--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,6 @@
   "proxy": "http://localhost:3001/",
   "dependencies": {
     "@apollo/client": "^3.5.8",
-    "@babel/core": "^7.23.7",
     "@stripe/stripe-js": "^1.3.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -40,8 +39,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.23.7",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-syntax-jsx": "^7.23.3",
+    "@babel/preset-env": "^7.23.8",
     "@babel/preset-react": "^7.23.3",
     "babel-eslint": "^10.1.0",
     "eslint": "^8.56.0",
