--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,9 @@
       "last 1 safari version"
     ]
   },
+  "babel": {
+      "presets": ["@babel/preset-env"]
+  },
   "devDependencies": {
     "@babel/core": "^7.23.7",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
