--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "dotenv": "^16.4.5",
     "graphql": "^16.8.1",
     "jwt-decode": "^2.2.0",
     "react": "^16.13.1",
@@ -41,9 +42,7 @@
       "last 1 safari version"
     ]
   },
-
   "devDependencies": {
-
     "@babel/plugin-syntax-jsx": "^7.23.3",
     "@babel/preset-env": "^7.23.8",
     "@babel/preset-react": "^7.23.3",
